# gnu-apl

./: .apl.history  .dockerignore  .gitignore  AUTHORS  Dockerfile  Doxyfile  Makefile  Makefile.am  Makefile.in  Makefile.incl  README  README-1-prerequisites  README-10-python  README-11-bogus-compiler-warnings  README-12-vpath-builds  README-13-build-pitfalls  README-2-configure  README-3-keyboard  README-4-compliance  README-5-WINDOWS  README-6-porting  README-7-more-info  README-9-post-installation  aclocal.m4  buildtag.hh  buildtag.sh  config.h  config.h.in  config.status  configure  configure.ac  configure_options  exported_from  libtool  makefile.h  x
HOWTOs/: APL-Communication-Cookbook.asciidoc  APL-Communication-Cookbook.html  Adding-System-Functions.html  GNU-APL-Memory-Management.asciidoc  GNU-APL-Memory-Management.html  GNU-APL-Troubleshooting.asciidoc  GNU-APL-Troubleshooting.html  Makefile  Makefile.am  Makefile.in  Parallel-APL.asciidoc  Parallel-APL.html  Quad-GTK.asciidoc  Quad-GTK.html
doc/DALY/: Makefile.am  Makefile.in  apl-library.info  apl-library.texi  apl-pkg-mgr.texi  apl_kbd.texi  arg_parser.texi  assert.texi  cfg.texi  cl.texi  date.texi  dom.texi  export.texi  finance.texi  html.texi  import.texi  lex.texi  lex1.texi  lpr.texi
erlang/: Makefile  Makefile.am  Makefile.in  README  apl.beam  apl.erl  apl.erl.in  apl_example.beam  apl_example.erl  erlang_APL_nif.c
gnu-apl.d/: Makefile  Makefile.am  Makefile.in  preferences  preferences.in
src/: .apl.history  .swp  APL_Float_as_class.hh  APL_types.hh  Archive.cc  Archive.hh  ArrayIterator.cc  ArrayIterator.hh  Assert.cc  Assert.hh  Avec.cc  Avec.def  Avec.hh  Backtrace.cc  Backtrace.hh  Bif_F12_COMMA.cc  Bif_F12_COMMA.hh  Bif_F12_DOMINO.cc  Bif_F12_DOMINO.hh  Bif_F12_FORMAT.cc  Bif_F12_FORMAT.hh  Bif_F12_INDEX_OF.cc  Bif_F12_INDEX_OF.hh  Bif_F12_INTERVAL_INDEX.cc  Bif_F12_INTERVAL_INDEX.hh  Bif_F12_PARTITION_PICK.cc  Bif_F12_PARTITION_PICK.hh  Bif_F12_SORT.cc  Bif_F12_SORT.hh  Bif_F12_TAKE_DROP.cc  Bif_F12_TAKE_DROP.hh  Bif_OPER1_COMMUTE.cc  Bif_OPER1_COMMUTE.hh  Bif_OPER1_EACH.cc  Bif_OPER1_EACH.hh  Bif_OPER1_REDUCE.cc  Bif_OPER1_REDUCE.hh  Bif_OPER1_SCAN.cc  Bif_OPER1_SCAN.hh  Bif_OPER2_INNER.cc  (+243 more)
src/.deps/: AP100-Backtrace.Po  AP100-Svar_DB.Po  AP100-Svar_record.Po  AP210-Backtrace.Po  AP210-Svar_DB.Po  AP210-Svar_record.Po  APserver-Svar_record.Po  apl-Archive.Po  apl-Assert.Po  apl-Avec.Po  apl-Backtrace.Po  apl-Bif_F12_COMMA.Po  apl-Bif_F12_DOMINO.Po  apl-Bif_F12_FORMAT.Po  apl-Bif_F12_INDEX_OF.Po  apl-Bif_F12_INTERVAL_INDEX.Po  apl-Bif_F12_PARTITION_PICK.Po  apl-Bif_F12_SORT.Po  apl-Bif_F12_TAKE_DROP.Po  apl-Bif_OPER1_COMMUTE.Po  apl-Bif_OPER1_EACH.Po  apl-Bif_OPER1_REDUCE.Po  apl-Bif_OPER1_SCAN.Po  apl-Bif_OPER2_INNER.Po  apl-Bif_OPER2_OUTER.Po  apl-Bif_OPER2_POWER.Po  apl-Bif_OPER2_RANK.Po  apl-CDR.Po  apl-Cell.Po  apl-CharCell.Po  apl-Command.Po  apl-Common.Po  apl-ComplexCell.Po  apl-DerivedFunction.Po  apl-DiffOut.Po  apl-Doxy.Po  apl-DynamicObject.Po  apl-Error.Po  apl-Executable.Po  apl-FloatCell.Po  (+298 more)
src/APs/: AP100  AP100.cc  AP210  AP210.cc  APmain.cc  APmain.hh  APserver  APserver.cc  Makefile  Makefile.am  Makefile.in  Svar_DB_server.cc  Svar_DB_server.hh
src/APs/.deps/: AP100-AP100.Po  AP100-APmain.Po  AP210-AP210.Po  AP210-APmain.Po  APserver-APserver.Po  APserver-Svar_DB_server.Po
src/Gtk/: Gtk_enums.hh  Gtk_events1.asciidoc  Gtk_events2.asciidoc  Gtk_functions.asciidoc  Gtk_map.def  Gtk_server  Gtk_server.cc  Makefile  Makefile.am  Makefile.in
src/Gtk/.deps/: Gtk_server.Po
src/emacs_mode/: DefCommand.cc  FnCommand.cc  FnTagCommand.cc  FollowCommand.cc  FollowCommand.hh  GetVarCommand.cc  HelpCommand.cc  LAST_GIT_PULL  Makefile  Makefile.am  Makefile.in  NetworkConnection.cc  RunCommand.cc  SendCommand.cc  SystemFnCommand.cc  SystemVariableCommand.cc  TcpListener.cc  TraceData.cc  TraceData.hh  UnixSocketListener.cc  VariablesCommand.cc  VersionCommand.cc  emacs.cc  emacs.hh  network.cc
src/emacs_mode/.deps/: DefCommand.Plo  FnCommand.Plo  FnTagCommand.Plo  FollowCommand.Plo  GetVarCommand.Plo  HelpCommand.Plo  Listener.Plo  LockWrapper.Plo  NetworkConnection.Plo  RunCommand.Plo  SendCommand.Plo  SiCommand.Plo  SicCommand.Plo  SystemFnCommand.Plo  SystemVariableCommand.Plo  TcpListener.Plo  TempFileWrapper.Plo  TraceData.Plo  UnixSocketListener.Plo  VariablesCommand.Plo  VersionCommand.Plo  emacs.Plo  network.Plo  util.Plo
src/native/: Makefile  Makefile.am  Makefile.in  file_io.cc  template.hh
src/native/.deps/: lib_file_io_la-file_io.Plo  lib_template_F0_la-template_F0.Plo  lib_template_F12_la-template_F12.Plo  lib_template_OP1_la-template_OP1.Plo  (+1 more)
src/sql/: ArgListBuilder.hh  Connection.cc  Connection.hh  Makefile  Makefile.am  Makefile.in  PostgresArgListBuilder.cc  PostgresArgListBuilder.hh  PostgresConnection.cc  PostgresConnection.hh  PostgresProvider.cc  PostgresProvider.hh  Provider.hh  SqliteArgListBuilder.cc  SqliteArgListBuilder.hh  SqliteConnection.cc  SqliteConnection.hh  SqliteProvider.cc  SqliteProvider.hh  SqliteResultValue.cc  SqliteResultValue.hh  apl-sqlite.cc  apl-sqlite.hh
src/testcases/: AAA1.tc  AAA2.tc  AAA3.tc  AAA4_Function_headers.tc  AP210.tc  APnnn.tc  APnnn_1011-running  APnnn_1011.tc2.log1  APnnn_1011.tc2.log2  Add.tc  And.tc  Binding.tc  Binomial.tc  BobSmithChars.tc  Boolean.tc  Bracket_Index.tc  COPY.tc  Catenate.tc  Catenate_with_Axis.tc  Ceiling.tc  Circle_Functions.tc  Clone.tc  Cloning.tc  Commute.tc  Compress.tc  Compress_with_axis.tc  Conjugate.tc  CopyOnWrite.tc  Deal.tc  Decode.tc  Depth.tc  Direction.tc  Disclose.tc  Disclose_with_axis.tc  Divide.tc  Drop.tc  Drop_with_axis.tc  DumpLoad.tc  Each_dyadic.tc  Each_monadic.tc  (+203 more)
src/workspaces/: Makefile  Makefile.am  Makefile.in
wslib3/DALY/: Makefile.am  Makefile.in  date.apl  fin.apl  fmt.apl  lex.apl  seq.apl  stack.apl  stat.apl  xml.apl
wslib5/DALY/: Makefile.am  Makefile.in  aparse.apl  assert.apl  cfg.apl  cl.apl  dom.apl  export.apl  fin.apl  find_test_data.apl  import.apl  lpr.apl  pref.apl  prompt.apl  pw.apl  utf8.apl  utl.apl  wblg.apl  wsinit.apl
(+3532 files in other folders)
